# test_etl

./: .gitignore  README.md  app.py  main.py  pyproject.toml
analytic/: join.py
common/: normalizers.py  validators.py
config/: .conf  config.yaml
data/database/: empresa2.db
data/output/: EJEMPLO_TABLON_COMBINADO.csv
extractors/: extractor.py  rdf_extractor.py  sqlite_extractor.py
models/: cliente_schema.py  transaccion_schema.py
scripts/: setup_db.py  update_db.py
utils/: etl_engine.py
