[project]
name = "test-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
]
